[metadata]
name= rag_code_utils
version = attr: rag_code_utils.__version__
description = RAG python code utils
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords= RAG code utils python llm context
license=MIT
author=Sam Arbid
author_email=samarbid13@gmail.com
platforms=any,
url=https://github.com/Samk13/rag-code-utils
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    python-dotenv>=0.10.3
    ruff>=0.4.2

[options.entry_points]
console_scripts =
    rag-code-utils = main:mine_context

[check-manifest]
ignore =
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1
